--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Giga+Sans:wght@300&display=swap" rel="stylesheet">
-
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <title>Tori Skin</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -333,7 +333,16 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-5 gap-8 px-4">
                 <!-- Title Section (Aligned with other sections) -->
                 <div>
-                    <h1 class="text-5xl mb-6" style="font-family: 'Playfair Display', serif;">Tori Skin</h1>
+                    <h1 class="text-5xl mb-6 text-center" style="font-family: 'Playfair Display', serif;">Tori Skin</h1>
+                    <!-- Social Media Icons, Centered below the title -->
+                    <div class="flex justify-center space-x-6 mt-4">
+                        <a href="#" class="text-white text-2xl hover:text-gray-400">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="#" class="text-white text-2xl hover:text-gray-400">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>
                 </div>
 
                 <!-- Company Section -->
@@ -386,8 +395,8 @@
         <div class="text-center mt-8 text-sm">
             <p>COPYRIGHT&copy; 2022 | Tori Skin</p>
         </div>
-
     </footer>
+
 
 </body>
 
