--- a/index.html
+++ b/index.html
@@ -22,21 +22,39 @@
 <body class="bg-cover h-screen text-white">
 
     <!-- Navbar (Fixed and Responsive) -->
-    <nav class="fixed top-0 left-0 w-full bg-transparent p-10 pl-16 z-10">
-        <div class="container mx-auto flex justify-between items-center">
-            <ul class="flex space-x-16">
-                <li><a href="#" class="text-[#426633] underline font-light underline-offset-4"
-                        style="font-family: 'Giga Sans', sans-serif;">Home</a></li>
+    <nav class="fixed top-0 left-0 w-full bg-transparent pl-16 z-10">
+        <div class="container mx-auto flex justify-between items-center relative">
+            <!-- Hamburger Button (Left Corner on Mobile) -->
+            <button id="menu-toggle" class="md:hidden text-black focus:outline-none absolute left-4 z-20">
+                <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
+                    </path>
+                </svg>
+            </button>
 
-                <li><a href="#" class="text-black font-light" style="font-family: 'Giga Sans', sans-serif;">About Us</a>
-                </li>
-                <li><a href="#" class="text-black font-light" style="font-family: 'Giga Sans', sans-serif;">Services</a>
-                </li>
-                <li><a href="#" class="text-black font-light" style="font-family: 'Giga Sans', sans-serif;">Contact
-                        Us</a></li>
+            <!-- Navigation Links -->
+            <ul id="menu"
+                class="hidden md:flex flex-col md:flex-row md:space-x-16 absolute md:relative top-20 left-0 w-full md:w-auto p-5 md:p-0 bg-transparent">
+                <li class="text-left pl-6"><a href="#" class="text-[#426633] underline font-light underline-offset-4"
+                        style="font-family: 'Giga Sans', sans-serif;">Home</a></li>
+                <li class="text-left pl-6"><a href="#" class="text-black font-light"
+                        style="font-family: 'Giga Sans', sans-serif;">About Us</a></li>
+                <li class="text-left pl-6"><a href="#" class="text-black font-light"
+                        style="font-family: 'Giga Sans', sans-serif;">Services</a></li>
+                <li class="text-left pl-6"><a href="#" class="text-black font-light"
+                        style="font-family: 'Giga Sans', sans-serif;">Contact Us</a></li>
             </ul>
         </div>
     </nav>
+
+    <script>
+        // Toggle Menu
+        document.getElementById("menu-toggle").addEventListener("click", function () {
+            document.getElementById("menu").classList.toggle("hidden");
+        });
+    </script>
+
 
     <!-- Hero Section -->
     <section class="relative flex items-center justify-center-start h-screen pl-16">
@@ -84,7 +102,7 @@
                 <div class="flex justify-center gap-6 flex-wrap">
                     <!-- Product Card 1 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -102,7 +120,7 @@
 
                     <!-- Product Card 2 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -120,7 +138,7 @@
 
                     <!-- Product Card 3 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -141,7 +159,7 @@
                 <div class="flex justify-center gap-6 flex-wrap">
                     <!-- Product Card 4 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -159,7 +177,7 @@
 
                     <!-- Product Card 5 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -177,7 +195,7 @@
 
                     <!-- Product Card 6 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -396,7 +414,6 @@
             <p>COPYRIGHT&copy; 2022 | Tori Skin</p>
         </div>
     </footer>
-
 
 </body>
 
