--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
     </section>
 
     <!-- Product Section -->
+    <!-- Product Section -->
     <section class="py-16 px-8 bg-white text-gray-900">
         <div class="text-center mb-8">
             <h1 class="text-5xl text-gray-900 mb-4" style="font-family: 'Playfair Display', serif;">PRODUCTS</h1>
@@ -102,7 +103,7 @@
                 <div class="flex justify-center gap-6 flex-wrap">
                     <!-- Product Card 1 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -120,7 +121,7 @@
 
                     <!-- Product Card 2 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -138,7 +139,7 @@
 
                     <!-- Product Card 3 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -159,7 +160,7 @@
                 <div class="flex justify-center gap-6 flex-wrap">
                     <!-- Product Card 4 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -177,7 +178,7 @@
 
                     <!-- Product Card 5 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 2.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
@@ -195,7 +196,7 @@
 
                     <!-- Product Card 6 -->
                     <div
-                        class="w-64 transform overflow-hidden rounded-lg bg-white shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
+                        class="w-64 transform overflow-hidden rounded-lg bg-white dark:bg-slate-800 shadow-md duration-300 hover:scale-105 hover:shadow-lg mb-6">
                         <img class="w-full object-cover object-center" src="assets/images/Product 1.jpg"
                             alt="Product Image" />
                         <div class="p-4 rounded-[15px]">
