--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
 <body class="bg-cover h-screen text-white">
 
     <!-- Navbar (Fixed and Responsive) -->
-    <nav class="fixed top-0 left-0 w-full bg-transparent pl-16 z-10">
-        <div class="container mx-auto flex justify-between items-center relative">
+    <nav class="fixed top-0 left-0 w-full bg-transparent z-10">
+        <div class="container mx-auto flex justify-between items-center relative px-4">
             <!-- Hamburger Button (Left Corner on Mobile) -->
-            <button id="menu-toggle" class="md:hidden text-black focus:outline-none absolute left-4 z-20">
+            <button id="menu-toggle"
+                class="md:hidden text-black focus:outline-none absolute left-4 top-1/2 -translate-y-1/2 z-20 pt-10">
                 <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"
                     xmlns="http://www.w3.org/2000/svg">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16">
@@ -47,6 +48,7 @@
             </ul>
         </div>
     </nav>
+
 
     <script>
         // Toggle Menu
@@ -293,20 +295,18 @@
         </div>
     </section>
 
-
-
     <section>
         <div class="h-[600px] relative">
             <!-- Top Half (Black background) -->
             <div class="h-1/2 bg-black">
                 <!-- Title "KNOW MORE" -->
                 <div class="absolute top-0 left-1/2 transform -translate-x-1/2 pt-12">
-                    <h2 class="text-4xl text-white relative">
+                    <h2 class="text-4xl text-white relative text-center">
                         <span
-                            class="absolute left-[-90px] w-[35%] border-t-2 border-white top-1/2 transform -translate-y-1/2"></span>
+                            class="absolute left-[-90px] w-[35%] border-t-2 border-white top-1/2 transform -translate-y-1/2 hidden md:block"></span>
                         KNOW MORE
                         <span
-                            class="absolute right-[-90px] w-[35%] border-t-2 border-white top-1/2 transform -translate-y-1/2"></span>
+                            class="absolute right-[-90px] w-[35%] border-t-2 border-white top-1/2 transform -translate-y-1/2 hidden md:block"></span>
                     </h2>
                 </div>
             </div>
@@ -314,32 +314,39 @@
             <!-- Bottom Half (White background) -->
             <div class="h-1/2 bg-white"></div>
 
-            <!-- Image Container in the Middle -->
-            <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 flex gap-6">
+            <!-- Image Container -->
+            <div
+                class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 flex gap-4 sm:gap-6 items-center">
                 <!-- Image 1 -->
-                <div class="w-60 h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
+                <div
+                    class="w-40 h-56 sm:w-60 sm:h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
                     <img src="assets/images/Model 4.png" alt="Image 1" class="w-full h-full object-cover" />
                     <div class="bg-white bg-opacity-50 px-2 py-2 text-center w-full">
-                        <h1 class="text-xl text-black" style="font-family: 'Playfair Display', serif;">ANTI-ACNE</h1>
-                        <p class="text-sm text-black"
+                        <h1 class="text-lg sm:text-xl text-black" style="font-family: 'Playfair Display', serif;">
+                            ANTI-ACNE</h1>
+                        <p class="text-xs sm:text-sm text-black"
                             style="color: #7C7C7C; font-family: 'Giga Sans', sans-serif; font-weight: 300;">Read</p>
                     </div>
                 </div>
                 <!-- Image 2 -->
-                <div class="w-60 h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
+                <div
+                    class="w-40 h-56 sm:w-60 sm:h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
                     <img src="assets/images/Model 5.jpg" alt="Image 2" class="w-full h-full object-cover" />
                     <div class="bg-white bg-opacity-50 px-2 py-2 text-center w-full">
-                        <h1 class="text-xl text-black" style="font-family: 'Playfair Display', serif;">BRIGHTENING</h1>
-                        <p class="text-sm text-black"
+                        <h1 class="text-lg sm:text-xl text-black" style="font-family: 'Playfair Display', serif;">
+                            BRIGHTENING</h1>
+                        <p class="text-xs sm:text-sm text-black"
                             style="color: #7C7C7C; font-family: 'Giga Sans', sans-serif; font-weight: 300;">Read</p>
                     </div>
                 </div>
                 <!-- Image 3 -->
-                <div class="w-60 h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
+                <div
+                    class="w-40 h-56 sm:w-60 sm:h-80 rounded-lg overflow-hidden flex flex-col justify-end items-center">
                     <img src="assets/images/Model 3.jpg" alt="Image 3" class="w-full h-full object-cover" />
                     <div class="bg-white bg-opacity-50 px-2 py-2 text-center w-full">
-                        <h1 class="text-xl text-black" style="font-family: 'Playfair Display', serif;">ANTI-AGING</h1>
-                        <p class="text-sm text-black"
+                        <h1 class="text-lg sm:text-xl text-black" style="font-family: 'Playfair Display', serif;">
+                            ANTI-AGING</h1>
+                        <p class="text-xs sm:text-sm text-black"
                             style="color: #7C7C7C; font-family: 'Giga Sans', sans-serif; font-weight: 300;">Read</p>
                     </div>
                 </div>
